welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:29: error: not found: type Into
  var nbLigne:Into=0
              ^